# ozean-licht

./: .dockerignore  .gitignore  .mcp.json  .ports.env  ADMIN_PATTERNS.md  ADMIN_PATTERNS_FILE_REFERENCE.md  ADMIN_PATTERNS_INDEX.md  ADMIN_PATTERNS_QUICK_REFERENCE.md  BRANDING.md  CLAUDE.md  COMPONENT_ANALYSIS.md  CONTEXT_MAP.md  CONTEXT_MAP_RESTRUCTURE_TEMP.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.storybook  MCP_INTEGRATION.md  PYTHON_CLEANUP_COMPLETE.md  README.md  SCOUT_REPORT_COMMAND_PALETTE_ACCESS.md  SCOUT_REPORT_INDEX.md  activate  design-system.md  docker-compose.mcp-gateway.yml  docker-compose.storybook.yml  example.env  ozean-licht-ecosystem.code-workspace  package-lock.json  package.json  playwright-mcp-config.json  pnpm-lock.yaml  pnpm-workspace.yaml  storybook-iteration-chat-visionary.md  vitest.config.ts  vitest.setup.ts
adws/: README.md  (+18 more)
apps/orchestrator_3_stream/backend/: .env.sample  main.py  monitor_tokens.py  pyproject.toml  test_aggressive_context.py  test_priority_implementations.py
apps/orchestrator_3_stream/backend/modules/: adw_manager.py  agent_manager.py  command_agent_hooks.py  config.py  context_manager.py  conversation_summarizer.py  cost_tracker.py  database.py  event_summarizer.py  file_tracker.py  hooks.py  logger.py  message_summarizer.py  model_selector.py  orchestrator_hooks.py  orchestrator_service.py  rate_limiter.py  response_cache.py  single_agent_prompt.py  slash_command_filter.py  slash_command_parser.py  subagent_loader.py  subagent_models.py  websocket_manager.py
apps/orchestrator_3_stream/backend/playwright-reports/: .keep
(+2957 files in other folders)
